Fix footer wrapping

--- a/site/themes/tes/assets/stylesheets/4-objects/_flex.scss
+++ b/site/themes/tes/assets/stylesheets/4-objects/_flex.scss
@@ -19,3 +19,7 @@
 .flex__1 {
   flex: 1;
 }
+
+.flex--wrap {
+  flex-wrap: wrap;
+}
